# substr-task

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  solution.cpp
.github/workflows/: cpp.yml
ci-extra/: set-upstream.sh  test-valgrind.sh  test.sh
src/: main.cpp
test/: package.yaml  stack.yaml
test/app/: Main.hs
test/src/: Lib.hs
